https://zalearning.netlify.app/

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://aquamarine-pixie-a97742.netlify.app/'
+baseURL = 'https://zalearning.netlify.app/'
 languageCode = 'en-us'
 title = 'Zalepik'
 # Novela settings
