--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://zalepik.netlify.app/'
+baseURL = 'https://zalepik.netlify.app'
 languageCode = 'en-us'
 title = 'Zalepik'
 # Novela settings
